--- a/CoreDemo1/Views/Message/MesajDetails.cshtml
+++ b/CoreDemo1/Views/Message/MesajDetails.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "MesajDetails";
     Layout = "~/Views/Shared/WriterLayout.cshtml";
 }
-<h1>Blog Düzenleme Sayfası</h1>
+<h1>Mesaj Detay Sayfası</h1>
 <br />
 
 @Html.Label("Mesaj ID")
