--- a/CoreDemo1/Views/Shared/Components/WriterMessageNotification/Default.cshtml
+++ b/CoreDemo1/Views/Shared/Components/WriterMessageNotification/Default.cshtml
@@ -7,13 +7,13 @@
     {
         <a class="dropdown-item preview-item">
             <div class="preview-thumbnail">
-                <img src="@item.SenderUser.WriterImage" alt="image" class="profile-pic">
-            </div>
+                <img src="@item.SenderUser.ImageUrl" alt="image" class="profile-pic">
+             </div>
             <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">@item.SenderUser.WriterName sana yeni bir mesaj gönderdi</h6>
+                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">@item.SenderUser.UserName sana yeni bir mesaj gönderdi</h6>
                 <p class="text-gray mb-0"> @item.MessageDate.ToShortTimeString() </p>
             </div>
         </a>
     }
     <h6 class="p-3 mb-0 text-center">3 Yeni Mesaj</h6>
-</div>
+</div> 
