--- a/CoreDemo1/Views/Shared/WriterLayout.cshtml
+++ b/CoreDemo1/Views/Shared/WriterLayout.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Purple Admin</title>
+    <title>Yazar Paneli</title>
     <link rel="stylesheet" href="~/Writer/assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/Writer/assets/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="~/Writer/assets/css/style.css">
@@ -43,16 +43,16 @@
                                 <span class="availability-status online"></span>
                             </div>
                             <div class="nav-profile-text">
-                                <p class="mb-1 text-black">David Greymaax</p>
+                                <p class="mb-1 text-black">@ViewBag.v</p>
                             </div>
                         </a>
                         <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-                            <a class="dropdown-item" href="#">
-                                <i class="mdi mdi-cached mr-2 text-success"></i> Activity Log
+                            <a class="dropdown-item" href="/Writer/WriterEditProfile/">
+                                <i class="mdi mdi-cached mr-2 text-success"></i> Ayarlar
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">
-                                <i class="mdi mdi-logout mr-2 text-primary"></i> Signout
+                            <a class="dropdown-item" href="/Login/LogOut/">
+                                <i class="mdi mdi-logout mr-2 text-primary"></i> Çıkış Yap
                             </a>
                         </div>
                     </li>
