--- a/CoreDemo1/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo1/Views/Writer/WriterNavbarPartial.cshtml
@@ -9,7 +9,7 @@
                     <!--change to offline or busy as needed-->
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                    <span class="font-weight-bold mb-2">Yazar adı soyadı</span>
+                    <span class="font-weight-bold mb-2">@ViewBag.nameSurname</span>
                     <span class="text-secondary text-small">Yazılım mühendisi</span>
                 </div>
                 <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
@@ -41,8 +41,14 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Writer/WriterMessage/">
-                <span class="menu-title">Mesajlar</span>
+            <a class="nav-link" href="/Message/Inbox/">
+                <span class="menu-title">Gelen Mesajlar</span>
+                <i class="mdi mdi-message menu-icon"></i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Message/Senbox/">
+                <span class="menu-title">Gönderilen Mesajlar</span>
                 <i class="mdi mdi-message menu-icon"></i>
             </a>
         </li>
@@ -65,7 +71,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Login/Logout/">
+            <a class="nav-link" href="/Login/LogOut/">
                 <span class="menu-title">Çıkış Yap</span>
                 <i class="mdi mdi-logout menu-icon"></i>
             </a>
