--- a/CoreDemo1/Views/Shared/Partial3.cshtml
+++ b/CoreDemo1/Views/Shared/Partial3.cshtml
@@ -15,7 +15,7 @@
 			<!-- subscribe -->
 			<div class="col-lg-4 subscribe-main footer-grid-agileits-w3ls text-left">
 				<h2>Mail Bültenimize Kayıt Olun..</h2>
-				 @*@await Html.PartialAsync("~/Views/Newsletter/SubscribeMail.cshtml") *@
+				 @await Html.PartialAsync("~/Views/Newsletter/SubscribeMail.cshtml")
 				<!-- //subscribe -->
 			</div>
 		</div>
