--- a/CoreDemo1/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreDemo1/Views/Writer/WriterEditProfile.cshtml
@@ -9,28 +9,28 @@
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title"> Yazar Profil Bilgileri Düzzenleme</h4>
+                <h4 class="card-title"> Yazar Profil Bilgileri Düzenleme</h4>
                 <br>
 
                 <form class="forms-sample" method="post">
                     <div class="form-group">
-                        <label for="exampleInputName1">Kullanıcı Adı</label>
+                        <label >Kullanıcı Adı</label>
                        <input type="text" asp-for="@Model.username" class="form-control" />
                     </div>
                     <div class="form-group" >
-                        <label for="exampleInputEmail3">Yazar Ad Soyad</label>
+                        <label >Yazar Ad Soyad</label>
                         <input type="text" asp-for="@Model.namesurname" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputEmail3">Mail Adresi</label>
+                        <label >Mail Adresi</label>
                         <input type="text" asp-for="@Model.mail" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputEmail3">Görsel Yolu</label>
+                        <label >Görsel Yolu</label>
                         <input type="text" asp-for="@Model.imageurl" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword4">Yeni Şifreniz</label>
+                        <label >Yeni Şifreniz</label>
                         <input type="password" class="form-control" asp-for="@Model.password" />
                     </div>
 
