--- a/CoreDemo1/Views/Blog/BlogReadAll.cshtml
+++ b/CoreDemo1/Views/Blog/BlogReadAll.cshtml
@@ -43,7 +43,7 @@
 									</li>
 									<li>
 										<a href="#">
-											<i class="far fa-comment"></i> 0 Yorum
+												<i class="far fa-comment"></i> @ViewBag.commentCount Yorum
 										</a>
 									</li>
 
