--- a/CoreDemo1/Views/Shared/Components/WriterMessageNotification/Default.cshtml
+++ b/CoreDemo1/Views/Shared/Components/WriterMessageNotification/Default.cshtml
@@ -15,5 +15,5 @@
             </div>
         </a>
     }
-    <h6 class="p-3 mb-0 text-center">3 Yeni Mesaj</h6>
+    <h6 class="p-3 mb-0 text-center"><a href="/Message/Inbox/">Tüm Mesajları Gör</a></h6>
 </div> 
