--- a/CoreDemo1/Views/Shared/WriterLayout.cshtml
+++ b/CoreDemo1/Views/Shared/WriterLayout.cshtml
@@ -43,7 +43,7 @@
                                 <span class="availability-status online"></span>
                             </div>
                             <div class="nav-profile-text">
-                                <p class="mb-1 text-black">@ViewBag.v</p>
+                                <p class="mb-1 text-black">@ViewBag.Name</p>
                             </div>
                         </a>
                         <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
@@ -76,7 +76,7 @@
                         @await Component.InvokeAsync("WriterNotification")
                     </li>
                     <li class="nav-item nav-logout d-none d-lg-block">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/Login/LogOut/">
                             <i class="mdi mdi-power"></i>
                         </a>
                     </li>
