--- a/CoreDemo1/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo1/Views/Writer/WriterNavbarPartial.cshtml
@@ -9,7 +9,7 @@
                     <!--change to offline or busy as needed-->
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                    <span class="font-weight-bold mb-2">@ViewBag.nameSurname</span>
+                    <span class="font-weight-bold mb-2">@ViewBag.Name</span>
                     <span class="text-secondary text-small">Yazılım mühendisi</span>
                 </div>
                 <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
@@ -47,7 +47,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Message/Senbox/">
+            <a class="nav-link" href="/Message/Sendbox/">
                 <span class="menu-title">Gönderilen Mesajlar</span>
                 <i class="mdi mdi-message menu-icon"></i>
             </a>
